# pointy

./: CMakeLists.txt  Execute.cpp  Execute.h  FCGI.cpp  FCGI.h  Interfaces.h  LICENSE  README.md  main.cpp  pointy.cpp  pointy.h
CMakeModules/: FindFcgi.cmake
Interface/: GlobalInterface.cpp  GlobalInterface.h
